--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.10.0
+bootstrap4==0.1.0
+dj-database-url==0.5.0
 Django==4.0.1
+django-bootstrap4==21.2
+django-heroku==0.3.1
+gunicorn==20.1.0
+Pillow==9.0.0
+psycopg2==2.9.3
+soupsieve==2.3.1
 sqlparse==0.4.2
+whitenoise==5.3.0
